apps/atuin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atuin
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/name: atuin
