apps/atuin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/name: atuin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`atuin.oisd.dev`)
      kind: Rule
      services:
        - name: atuin
          port: 8888
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
