apps/atuin/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/name: atuin
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: atuin
      port:
        name: http
  tls:
    - hosts:
        - atuin
